--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,10 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "postinstall": "npm rebuild bcrypt --build-from-source"
-  },
+    "dev": "nodemon src/app.js"
+    },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
